--- a/brewctl/build
+++ b/brewctl/build
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-g++ -Wall -Wextra -std=c++11 -lwiringPi *.cc -obrewctl
+g++ -Wall -Wextra -std=c++11 -lwiringPi -lsqlite3 *.cc -obrewctl
