--- a/brewctl/build
+++ b/brewctl/build
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-g++ -Wall -Wextra -Werror -pedantic -std=c++17 -lwiringPi -lsqlite3 *.cc -obrewctl
+g++ -g -Wall -Wextra -Werror -pedantic -std=c++17 -lwiringPi -lsqlite3 *.cc -obrewctl
