--- a/brewctl/Makefile
+++ b/brewctl/Makefile
@@ -12,10 +12,10 @@ APPNAME := brewctl
 
 SOURCES := \
     adc.cc application.cc config.cc device.cc error.cc gpioport.cc lcd.cc log.cc main.cc           \
-    sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc sqlitestmt.cc               \
+    session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc sqlitestmt.cc    \
     temperature.cc tempsensor.cc thermistor.cc
 
-CFLAGS := -g -Wall -Wextra -pedantic -std=c++17
+CFLAGS := -g -Wno-psabi -Wall -Wextra -Werror -pedantic -std=c++17
 
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPDIR)/$*.d
 
