--- a/brewctl/Makefile
+++ b/brewctl/Makefile
@@ -12,8 +12,8 @@ APPNAME := brewctl
 
 SOURCES := \
     adc.cc application.cc config.cc device.cc error.cc gpioport.cc lcd.cc log.cc main.cc           \
-    session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc sqlitestmt.cc    \
-    temperature.cc tempsensor.cc thermistor.cc
+    sensor.cc session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc        \
+    sqlitestmt.cc temperature.cc temperaturesensor.cc tempsensor.cc thermistor.cc
 
 CFLAGS := -g -Wno-psabi -Wall -Wextra -Werror -pedantic -std=c++17
 
