--- a/brewctl/Makefile
+++ b/brewctl/Makefile
@@ -11,8 +11,8 @@ endif
 APPNAME := brewctl
 
 SOURCES := \
-    adc.cc application.cc config.cc effector.cc error.cc gpioport.cc lcd.cc log.cc main.cc nulleffector.cc             \
-    nulltempsensor.cc registry.cc session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc        \
+    adc.cc application.cc config.cc defaulteffector.cc defaulttempsensor.cc effector.cc error.cc gpioport.cc lcd.cc    \
+    log.cc main.cc registry.cc session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc           \
     sqlitestmt.cc temperature.cc tempsensor.cc thermistor.cc
 
 CFLAGS := -g -Wno-psabi -Wall -Wextra -Werror -pedantic -std=c++17
