Improved GPIO port abstration: added class GPIOPin

--- a/brewctl/Makefile
+++ b/brewctl/Makefile
@@ -11,9 +11,9 @@ endif
 APPNAME := brewctl
 
 SOURCES := \
-    adc.cc application.cc config.cc defaulteffector.cc defaulttempsensor.cc effector.cc error.cc gpioport.cc lcd.cc    \
-    log.cc main.cc registry.cc session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc sqlitecolumn.cc           \
-    sqlitestmt.cc temperature.cc tempsensor.cc thermistor.cc
+    adc.cc application.cc config.cc defaulteffector.cc defaulttempsensor.cc effector.cc error.cc gpiopin.cc            \
+    gpioport.cc lcd.cc log.cc main.cc registry.cc session.cc sessionmanager.cc shiftreg.cc spiport.cc sqlite.cc        \
+    sqlitecolumn.cc sqlitestmt.cc temperature.cc tempsensor.cc thermistor.cc
 
 CFLAGS := -g -Wno-psabi -Wall -Wextra -Werror -pedantic -std=c++17
 
