Further source-tree movements: moved sqlite* classes into sqlite/ and include/sqlite/

--- a/brewctl/Makefile
+++ b/brewctl/Makefile
@@ -13,8 +13,8 @@ APPNAME := brewctl
 SOURCES := \
     adc.cc application.cc avahiservice.cc config.cc defaulteffector.cc defaulttempsensor.cc effector.cc error.cc       \
     httpservice.cc gpiopin.cc gpioport.cc lcd.cc log.cc main.cc registry.cc session.cc sessionmanager.cc shiftreg.cc   \
-    spiport.cc sqlite.cc sqlitecolumn.cc sqlitestmt.cc temperature.cc tempsensor.cc thermistor.cc thread.cc            \
-    util/net.cc util/random.cc util/sys.cc util/thread.cc
+    spiport.cc sqlite/sqlite.cc sqlite/sqlitecolumn.cc sqlite/sqlitestmt.cc temperature.cc tempsensor.cc thermistor.cc \
+    thread.cc util/net.cc util/random.cc util/sys.cc util/thread.cc
 
 CFLAGS := -g -Wno-psabi -Wall -Wextra -Werror -pedantic -std=c++17 -pthread -I.
 LDFLAGS := -pthread
