Moved tempsensor into peripherals/

--- a/brewctl/Makefile
+++ b/brewctl/Makefile
@@ -14,9 +14,9 @@ SOURCES := \
     avahiservice.cc framework/application.cc framework/config.cc framework/error.cc framework/log.cc                   \
     framework/registry.cc framework/thread.cc httpservice.cc main.cc peripherals/adc.cc peripherals/defaulteffector.cc \
     peripherals/defaulttempsensor.cc peripherals/effector.cc peripherals/gpiopin.cc peripherals/gpioport.cc            \
-    peripherals/lcd.cc peripherals/shiftreg.cc peripherals/spiport.cc peripherals/tempsensor.cc session.cc             \
-    sessionmanager.cc sqlite/sqlite.cc sqlite/sqlitecolumn.cc sqlite/sqlitestmt.cc temperature.cc thermistor.cc        \
-    util/net.cc util/random.cc util/sys.cc util/thread.cc
+    peripherals/lcd.cc peripherals/shiftreg.cc peripherals/spiport.cc peripherals/tempsensor.cc                        \
+    peripherals/thermistor.cc session.cc sessionmanager.cc sqlite/sqlite.cc sqlite/sqlitecolumn.cc                     \
+    sqlite/sqlitestmt.cc temperature.cc util/net.cc util/random.cc util/sys.cc util/thread.cc
 
 CFLAGS := -O3 -Wno-psabi -Wall -Wextra -Werror -pedantic -std=c++17 -pthread -I.
 LDFLAGS := -pthread
